[gd_scene load_steps=3 format=3 uid="uid://cadewdr5ixxfj"]

[ext_resource type="Script" path="res://tools/InputManagerTester.gd" id="1"]
[ext_resource type="Script" path="res://rythm_game/game_modes/heartbeat/HeartbeatInputManager.gd" id="2"]

[node name="InputManagerTester" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
show_behind_parent = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
show_behind_parent = true
layout_mode = 2

[node name="SticksContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Blue = raw input
Red = filtered input
Green = input history"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="ReturnToMainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Return to main menu"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventLog" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
scroll_following = true
selection_enabled = true

[node name="HeartbeatInputManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2")

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2/VBoxContainer/ReturnToMainMenuButton" to="." method="_on_ReturnToMainMenuButton_pressed"]
